<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_gravity="center" >
    </FrameLayout>

    <Button
        android:id="@+id/metronomeBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/mainMetronomeBtn"/>

    <Button
        android:id="@+id/tunerBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/mainTunerBtn" />

    <Button
        android:id="@+id/chordbaseBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="chordBtnHandler"
        android:text="@string/mainChordbaseBtn" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="fill_parent"
        android:layout_height="75dp" >
    </FrameLayout>

    <Button
        android:id="@+id/general_optionsBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/mainOptionsBtn" />

    <Button
        android:id="@+id/aboutBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/mainAboutBtn" />

</LinearLayout>
