<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:baselineAligned="false"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/clickview_frame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.10" >

        <TextView
            android:id="@+id/testView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <com.guitartool.metronome2.MetronomeView
            android:id="@+id/metronomeView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="0.03"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <Button
                android:id="@+id/m_minus_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/mMinusBtn" />

            <FrameLayout
                android:id="@+id/frameLayout1"
                android:layout_width="60dp"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/m_tempo_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </FrameLayout>

            <Button
                android:id="@+id/m_plus_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/mPlusBtn" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/m_tempo_sb"
            android:layout_width="294dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >

            <Spinner
                android:id="@+id/m_metrum_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:entries="@array/metra" />

            <Spinner
                android:id="@+id/m_upbeat_sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <ToggleButton
                android:id="@+id/m_on_off_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>

        <Button
            android:id="@+id/metronomeBackBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/oBackBtn" />
    </LinearLayout>

</LinearLayout>
